force-app/main/default/objects/Historique_Reseau_Associe__c/Historique_Reseau_Associe__c.object-meta.xml
<CustomObject>
    <description>Pour historiser les associations/dissociations des réseaux.</description>
    <label>Historique des réseaux</label>
    <nameField>
        <displayFormat>HRA-{0000}</displayFormat>
        <label>Numéro d&#39;Historique des réseaux</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques des réseaux</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>