force-app/main/default/objects/Historique_Reseau_Associe__c/fields/Date_de_modification__c.field-meta.xml
<CustomField>
    <fullName>Date_de_modification__c</fullName>
    <label>Date de modification</label>
    <type>Date</type>
</CustomField>