force-app/main/default/objects/Historique_Reseau_Associe__c/fields/Etat_du_statut__c.field-meta.xml
<CustomField>
    <fullName>Etat_du_statut__c</fullName>
    <label>Etat du statut</label>
    <length>100</length>
    <type>Text</type>
</CustomField>