force-app/main/default/objects/Historique_Reseau_Associe__c/fields/Modifie_par__c.field-meta.xml
<CustomField>
    <fullName>Modifie_par__c</fullName>
    <label>Modifié par</label>
    <length>100</length>
    <type>Text</type>
</CustomField>