force-app/main/default/objects/Historique_Reseau_Associe__c/fields/Operateur__c.field-meta.xml
<CustomField>
    <fullName>Operateur__c</fullName>
    <description>Ce champ permet de gérer la visibilité des données d&#39;historique des réseaux entre les opérateurs.</description>
    <label>Opérateur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_OPE</valueSetName>
    </valueSet>
</CustomField>