force-app/main/default/objects/Historique_Reseau_Associe__c/fields/Reseau_associe__c.field-meta.xml
<CustomField>
    <fullName>Reseau_associe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Réseau associé</label>
    <referenceTo>Reseau_Associe__c</referenceTo>
    <relationshipLabel>Historique des réseaux</relationshipLabel>
    <relationshipName>Historiques_des_reseaux</relationshipName>
    <type>Lookup</type>
</CustomField>