force-app/main/default/objects/Historique_Reseau_Associe__c/fields/Statut_associe_dissocie__c.field-meta.xml
<CustomField>
    <fullName>Statut_associe_dissocie__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associé</fullName>
            </value>
            <value>
                <fullName>Dissocié</fullName>
            </value>
            <value>
                <fullName>Exclus</fullName>
            </value>
            <value>
                <fullName>Interdit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>